Prevent message container from getting squished in a small window

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 	background-color: #FFFFFF;
 	margin-left:200;
 	margin-right:0;
+	min-width:500px;
 	text-align:left;
 }
 
